Add epoch-fenced range transfer
